--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,3 +1,7 @@
 edition = "2021"
-max_width = 120
+max_width = 160
+array_width = 60
+chain_width = 60
+fn_call_width = 160
+fn_args_layout = "Compressed"
 newline_style = "Unix"
