--- a/sais-sys/Cargo.toml
+++ b/sais-sys/Cargo.toml
@@ -14,11 +14,13 @@ path = "src/lib.rs"
 [dependencies]
 libc = "0.2"
 lazy_static = "1.4"
-openmp-sys = { optional = true, version = "1.2" }
+
+[target.'cfg(not(windows))'.dependencies.openmp-sys]
+optional = true
+version = "1.2"
 
 [build-dependencies]
 cc = "1.0"
-openmp-sys = { optional = true, version = "1.2" }
 
 [features]
 default = [ "sais32", "openmp" ]
