--- a/sais-sys/Cargo.toml
+++ b/sais-sys/Cargo.toml
@@ -15,7 +15,7 @@ path = "src/lib.rs"
 libc = "0.2"
 lazy_static = "1.4"
 
-[target.'cfg(not(windows))'.dependencies.openmp-sys]
+[target.'cfg(not(target_env = "msvc"))'.dependencies.openmp-sys]
 optional = true
 version = "1.2"
 
