--- a/sais-sys/Cargo.toml
+++ b/sais-sys/Cargo.toml
@@ -13,11 +13,15 @@ path = "src/lib.rs"
 
 [dependencies]
 libc = "0.2"
-lazy_static = "1.4"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies.openmp-sys]
 optional = true
 version = "1.2"
+
+[dev-dependencies]
+rand = "0.8"
+num-traits = "0.2"
+lazy_static = "1.4"
 
 [build-dependencies]
 cc = "1.0"
