--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ sais-sys = { version = "0.1.0", path = "./sais-sys" }
 [dev-dependencies]
 rand = "0.8"
 num-traits = "0.2"
-lazy_static = "1.4"
+once_cell = "1.13"
 
 [features]
 default = [ "sais32", "parallel" ]
