remove redundant features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,14 +19,8 @@ version = "3.2"
 features = [ "derive" ]
 
 [features]
-default = [ "sais32", "extra", "context", "parallel" ]
-context = []
+default = [ "sais32", "parallel" ]
 parallel = [ "sais-sys/openmp" ]
-extra = [ "bwt", "bwt_aux", "lcp", "sais_int" ]
-bwt = []
-bwt_aux = []
-lcp = []
-sais_int = []
 sais16 = [ "sais-sys/sais16" ]
 sais32 = [ "sais-sys/sais32" ]
 sais64 = [ "sais-sys/sais64" ]
